// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Theme: (header) should compile with module with subtitle 1`] = `
"[InterfaceItemA](interfaceitema.md).prop

[partial: members]
"
`;

exports[`Theme: (header) should compile with module without subtitle 1`] = `
"[partial: index]

[partial: members]
"
`;

exports[`Theme: (mdx) should escape angle brackets and quotes for full mdx support 1`] = `"Escape &#60;angle-brackets> and &#34;quotes&#34;"`;
